# singapur-cards

./: LICENSE  README.md
.github/workflows/: ci.yml  mobile-tests.yml  release.yml
apps/desktop/: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  skills-lock.json  specify-description.md  specify-ui-chat-description.md  splashscreen.html  tasks.md  vite.config.ts
apps/desktop/.claude/: settings.local.json
apps/desktop/.cursor/rules/: specify-rules.mdc
apps/desktop/.specify/: init-options.json
apps/desktop/.specify/memory/: constitution.md
apps/desktop/checklists/: requirements.md
apps/desktop/docs/: DSL Specification.md
apps/desktop/prompts/: save-models-prompt.md
apps/desktop/specs/001-desktop-vocab-learning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: bench_search.rs  seed_dev_db.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: app-ipc.toml  splash-screen.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs  models.rs  splash_screen.rs  state.rs
apps/desktop/src-tauri/src/commands/: api_key.rs  cards.rs  chat.rs  chat_history.rs  collections.rs  custom_models.rs  dictionary.rs  languages.rs  mod.rs  review.rs
apps/desktop/src-tauri/src/db/: queries.rs  schema.rs
apps/desktop/src-tauri/src/dev/: fixtures.rs  mod.rs
apps/desktop/src-tauri/src/dsl/: importer.rs  parser.rs
apps/desktop/src-tauri/src/sync/: backfill.rs  mod.rs  server.rs  types.rs
apps/desktop/src-tauri/tests/: db_integration_tests.rs  dsl_parser_tests.rs
apps/desktop/src-tauri/tests/fixtures/: malformed.dsl  valid.dsl  with_examples.dsl
apps/mobile/: .gitignore  README.md  app.json  da  jest.config.js  package-lock.json  package.json  skills-lock.json
apps/mobile/.claude/: settings.local.json
apps/mobile/app/: _layout.tsx  index.tsx  review.tsx
apps/mobile/ios/: Podfile
apps/mobile/scripts/: clean-user-data.ts  seed-dev-db.ts
apps/mobile/src/: global.css  theme.ts
docs/: README.md
docs/architecture/: system-architecture.md
docs/data/: core-entities.md  sql-schemas.md
docs/features/: ai-chat.md  cards.md  collections.md  dictionaries.md  languages.md  models.md  practice.md  reviews.md  sync.md  user-profile.md
docs/flows/: core-flows.md
docs/overview/: project-overview.md
(+243 files in other folders)
