[package]
name = "singapur-cards"
version = "0.1.0"
description = "Desktop vocabulary learning app"
authors = []
edition = "2021"

[lib]
name = "singapur_cards_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "singapur-cards"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab", "array"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
regex = "1"
thiserror = "2"
rand = "0.8"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
# Platform stores must be enabled explicitly; otherwise the default is an in-memory mock
# (set_password/read-back on the same Entry can succeed while a later Entry::new cannot).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile = "3"
fake = { version = "3", features = ["derive", "chrono"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
